tests/error_syntax.js.out
error: Uncaught SyntaxError: Unexpected identifier
[WILDCARD]tests/error_syntax.js:3:6

3 (the following is a syntax error  ^^ ! )
       ~~~~~~~~~

